fix uncropped photos & use sans-serif for italics

--- a/static/css/markdown.css
+++ b/static/css/markdown.css
@@ -27,6 +27,10 @@ p {
     margin-bottom: 9px;
 }
 
+em {
+    font-family: 'Roboto', sans-serif;
+}
+
 ul {
     margin: 0.5em 0;
     padding: 0 0 0 1.5em;
@@ -87,6 +91,14 @@ img.half-crop {
     margin-right: auto;
     padding-bottom: 5px;
     width: 50%;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 5px;
+    width: 90%
 }
 
 @media only screen and (hover: none) and (pointer: coarse) {
